Create TripCsv writer